--- a/wwwroot/src/app/modules/auth/components/registration/registration.component.html
+++ b/wwwroot/src/app/modules/auth/components/registration/registration.component.html
@@ -7,38 +7,24 @@
 >
   <!--begin::Heading-->
   <div class="mb-10 text-center">
-    <h1 class="text-dark mb-3">Create an Account</h1>
+    <h1 class="text-dark mb-3">Crie uma conta</h1>
     <div class="text-gray-400 fw-bold fs-4">
-      Already have an account?
+      Já tenho uma conta?
       <a
         routerLink="/auth/login"
         class="link-primary fw-bolder"
         [style.margin-left]="'5px'"
-        >Sign in?</a
+        >Entrar?</a
       >
     </div>
   </div>
   <!--end::Heading-->
 
-  <button type="button" class="btn btn-light-primary fw-bolder w-100 mb-10">
-    <img
-      alt="Logo"
-      src="./assets/media/svg/brand-logos/google-icon.svg"
-      class="h-20px me-3"
-    />Sign in with Google
-  </button>
-
-  <div class="d-flex align-items-center mb-10">
-    <div class="border-bottom border-gray-300 mw-50 w-100"></div>
-    <span class="fw-bold text-gray-400 fs-7 mx-2">OR</span>
-    <div class="border-bottom border-gray-300 mw-50 w-100"></div>
-  </div>
-
   <!-- begin::Alert error-->
   <ng-container *ngIf="hasError">
     <div class="mb-lg-15 alert alert-danger">
       <div class="alert-text font-weight-bold">
-        The registration details are incorrect
+        Os dados de registro estão incorretos
       </div>
     </div>
   </ng-container>
@@ -46,13 +32,13 @@
 
   <!--begin::Form group-->
   <div class="row fv-row mb-7">
-    <label class="form-label fw-bolder text-dark fs-6">Fullname</label>
+    <label class="form-label fw-bolder text-dark fs-6">Nome completo</label>
     <input
       class="form-control form-control-lg form-control-solid"
       type="text"
       name="fullname"
       formControlName="fullname"
-      placeholder="Fullname"
+      placeholder="Nome completo"
       autocomplete="off"
       [ngClass]="{
         'is-invalid': registrationForm.controls['fullname'].invalid,
@@ -88,11 +74,11 @@
 
   <!--begin::Form group-->
   <div class="fv-row mb-7">
-    <label class="form-label fw-bolder text-dark fs-6">Email</label>
+    <label class="form-label fw-bolder text-dark fs-6">E-mail</label>
     <input
       class="form-control form-control-lg form-control-solid"
       type="email"
-      placeholder="Email"
+      placeholder="E-mail"
       name="email"
       formControlName="email"
       autocomplete="off"
@@ -138,11 +124,11 @@
 
   <!--begin::Form group-->
   <div class="mb-10 fv-row">
-    <label class="form-label fw-bolder text-dark fs-6">Password</label>
+    <label class="form-label fw-bolder text-dark fs-6">Senha</label>
     <input
       class="form-control form-control-lg form-control-solid"
       type="password"
-      placeholder="Password"
+      placeholder="Senha"
       name="password"
       formControlName="password"
       autocomplete="off"
@@ -180,11 +166,13 @@
 
   <!--begin::Form group-->
   <div class="fv-row mb-5">
-    <label class="form-label fw-bolder text-dark fs-6">Confirm Password</label>
+    <label class="form-label fw-bolder text-dark fs-6"
+      >Confirme sua senha</label
+    >
     <input
       class="form-control form-control-lg form-control-solid"
       type="password"
-      placeholder="Confirm password"
+      placeholder="Confirme sua senha"
       name="cPassword"
       autocomplete="off"
       formControlName="cPassword"
@@ -225,7 +213,7 @@
     >
       <div class="fv-plugins-message-container">
         <div class="fv-help-block">
-          'Passsword' and 'Confirm Password' didn't match.
+          'Senha' e 'Confirmar senha' não coincidem.
         </div>
       </div>
     </ng-container>
@@ -247,11 +235,11 @@
         for="kt_login_toc_agree"
         class="form-check-label fw-bold text-gray-700 fs-6"
       >
-        I Agree the&nbsp;<a
+        Eu concordo com os&nbsp;<a
           href="https://keenthemes.com/metronic/?page=faq"
           target="_blank"
           class="ms-1 link-primary"
-          >terms and conditions</a
+          >termos e Condições</a
         >.
       </label>
     </div>
