--- a/wwwroot/src/app/modules/auth/components/forgot-password/forgot-password.component.html
+++ b/wwwroot/src/app/modules/auth/components/forgot-password/forgot-password.component.html
@@ -7,9 +7,9 @@
 >
   <!--begin::Title-->
   <div class="text-center mb-10">
-    <h1 class="text-dark mb-3">Forgotten Password ?</h1>
+    <h1 class="text-dark mb-3">Não lembra a senha?</h1>
     <div class="text-gray-400 fw-bold fs-4">
-      Enter your email to reset your password.
+      Digite seu e-mail para redefinir sua senha.
     </div>
   </div>
   <!--end::Title-->
@@ -18,7 +18,7 @@
   <ng-container *ngIf="errorState === errorStates.HasError">
     <div class="mb-lg-15 alert alert-danger">
       <div class="alert-text font-weight-bold">
-        Sorry, looks like there are some errors detected, please try again.
+        Desculpe, parece que foram detectados alguns erros. Tente novamente.
       </div>
     </div>
   </ng-container>
@@ -27,14 +27,14 @@
   <ng-container *ngIf="errorState === errorStates.NoError">
     <div class="mb-10 bg-light-info p-8 rounded">
       <!--begin::Body-->
-      <div class="text-info">Sent password reset. Please check your email</div>
+      <div class="text-info">Enviada redefinição de senha. Por favor verifique seu e-mail</div>
       <!--end::Body-->
     </div>
   </ng-container>
 
   <!--begin::Form group-->
   <div class="fv-row mb-10">
-    <label class="form-label fw-bolder text-gray-900 fs-6">Email</label>
+    <label class="form-label fw-bolder text-gray-900 fs-6">E-mail</label>
     <input
       class="form-control form-control-lg form-control-solid"
       type="email"
@@ -104,7 +104,7 @@
       id="kt_login_password_reset_form_cancel_button"
       class="btn btn-lg btn-light-primary fw-bolder"
     >
-      Cancel
+      Cancelar
     </a>
   </div>
   <!--end::Form group-->
